<resources>
    <string name="app_name">Stores</string>
    <string name="hint_name">Store Name</string>
    <string name="helperText">Required</string>
    <string name="helper_phone">Telephone</string>
    <string name="helper_website">Website URL</string>
    <string name="description_img_photo">Hello</string>
    <string name="hint_photo_url">Image URL</string>
    <string name="edit_store_title_add">Create Store</string>
    <string name="menu_save">Save</string>
    <string name="edit_store_message_save_success">Store added successfully</string>
    <string name="arg_id">key_id</string>
    <string name="edit_store_message_update_success">Updated store</string>
    <string name="edit_store_message_valid">Review required fields</string>
    <string name="edit_store_title_edit">Edit Store</string>
    <string name="dialog_delete_title">¿Delete Store?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialog_options_title">What do you want to do?</string>
    <string name="main_error_no_website">This store has no website</string>
    <string name="main_error_no_resolve">No se encontro ninguna app compatible</string>
    <string name="options_item_call">Call</string>
    <string name="options_item_website">Go to website</string>
    <string name="dialog_exit_title">Exit this screen?</string>
    <string name="dialog_exit_message">If you have not saved changes they will be lost</string>
    <string name="dialog_exit_ok">Exit</string>
    <string name="helper_required">Required</string>
    <string name="description_store_add">Crear tienda</string>
</resources>