<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".editModule.EditStoreFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/fragment_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:helperText="@string/helperText"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_store"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="@integer/counter_max_name"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/helper_phone"
            app:helperText="@string/helperText"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="@integer/counter_max_phone"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/helper_website"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_ink"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/color_link"
                app:maxLines="@integer/lines_url_website"
                android:minLines="@integer/lines_url_website"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_padding_default"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhotoUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_photo_url"
                app:helperText="@string/helper_required"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_ink"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhotoUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_link"
                    android:minLines="@integer/lines_url_photo"
                    app:maxLines="@integer/lines_url_photo"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>
            
            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="@dimen/photo_size_thumb"
                android:layout_height="@dimen/photo_size_thumb"
                android:src="@drawable/ic_image"
                android:layout_marginStart="@dimen/common_padding_default"
                app:contentDescription="@string/description_img_photo"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>